--- a/Maths-2/note_type_FODE.html
+++ b/Maths-2/note_type_FODE.html
@@ -44,7 +44,7 @@
        <a href="file:///D:/Abaan%20ka%20Folder/Padhai/NoteShare/Notes/Maths%202/Module%201.pdf">
        <button class="fade-down" type="button"><span></span>Handwritten Notes</button>
            </a>
-       <a href="file:///C:/Users/User/Desktop/NOTESHARE/Notes/Maths%202/Module%201.pdf">
+       <a href="file:///D:/Abaan%20ka%20Folder/Padhai/NoteShare/Notes/Maths%202/Module%201.pdf">
        <button class="fade-down" type="button"><span></span>Teacher's Notes</button>
            </a>
     </div>
