--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
         <div class="content">
-            <h1 class="fade-down">Welcome to NoteShare.</h1>
+            <h1 class="fade-down">NoteShare.</h1>
             <p id="message" class="fade-down" style="height: 1.5em;"></p>
         </div>
         
